@@ -1,5 +1,6 @@
 Changes in synthPop version 0.1.9
   * whipple index (original and modified) included
+  * sprague index included
 
 Changes in synthPop version 0.1.8
   * remove S3-class spBwplot() -> only default method was implemented. Removed option to supply a list of populations; rewritten to use 'synthPopObj'-objects
